# RcppVexCL

./: .travis.yml  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: RcppExports.R
inst/include/boost/fusion/support/: unused.hpp
inst/include/vexcl/: vexcl.hpp
man/: RcppVexCL-package.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  rcpp_hello_world.cpp
